--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "incremental": true,
 
     /* Path Aliases */
-    "baseUrl": "./meta_brief",
+    "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     }
