--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
+      - name: Set environment variables
+        run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
+
       - name: Build the project
         run: npm run build
 
