--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.9",
     "@clerk/nextjs": "^6.13.0",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.5.0",
