--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lucide-react": "^0.485.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
+    "octokit": "^4.1.2",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
