Update package dependencies in package.json and package-lock.json; add @langchain/community and @langchain/core, and include ignore package. Enhance GitHub workflow by adding new environment variables for GitLab and Gemini API keys. Modify project router to handle commit polling for specific project IDs.

--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -26,6 +26,11 @@ jobs:
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
           echo "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}" >> $GITHUB_ENV
           echo "CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }}" >> $GITHUB_ENV
+          echo "GITLAB_TOKEN=${{ secrets.GITLAB_TOKEN }}" >> $GITHUB_ENV
+          echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
+          echo "GITLAB_URL=${{ secrets.GITLAB_URL }}" >> $GITHUB_ENV
+          echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> $GITHUB_ENV
+        
 
       - name: Build the project
         run: npm run build
