--- a/package.json
+++ b/package.json
@@ -61,9 +61,12 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/cli-progress": "^3.11.6",
     "ai": "^4.3.9",
     "axios": "^1.8.4",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
+    "cli-progress": "^3.12.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
