--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "@types/cli-progress": "^3.11.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@uiw/react-md-editor": "^4.0.5",
     "ai": "^4.3.9",
     "axios": "^1.8.4",
     "chalk": "^5.4.1",
@@ -82,6 +84,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.2",
