--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.11",
+    "@aws-sdk/client-s3": "^3.787.0",
     "@clerk/elements": "^0.23.9",
     "@clerk/nextjs": "^6.13.0",
     "@gitbeaker/node": "^35.8.1",
@@ -82,8 +83,10 @@
     "next-themes": "^0.4.6",
     "octokit": "^4.1.2",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.6.1",
