fixing redirecting to wrong page

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
-  "build": {
-    "installCommand": "npm install --force"
-  }
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next",
+      "config": {
+        "installCommand": "npm install --force"
+      }
+    }
+  ]
 }
